# python-project-49

./: .gitignore  Makefile  README.md  README.md.bak  brain_calc.py  brain_even.py  brain_gcd.py  brain_progression.py  pyproject.toml  record_play.py  run_all_games.sh  uv.toml.bak
.github/workflows/: hexlet-check.yml  main.yml  uv.toml
.github/workflows/backup/: hexlet-check.yml
brain_games/: cli.py
brain_games/games/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  pyproject.toml
recordings/: brain-calc.txt  brain-even.txt  brain-gcd.txt  brain-prime.txt  brain-progression.txt
tests/: test_cli.py  test_games.py
