[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Mind Games project"
authors = ["ТВОЙ_НИК <email@example.com>"]
packages = [
  { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:play_game"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
