[project]
name = "hexlet-code"
version = "0.1.0"
description = "Набор консольных игр Brain Games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
