[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games – консольные игры для тренировки логики"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[tool.uv]
dev-dependencies = [
    "pytest",
]
