[project]
name = "brain-games"
version = "0.1.0"
description = "A collection of Brain Games (Hexlet project)"
authors = [{ name = "Denis", email = "denisgrigoriev1973@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"
